--- a/modelo.html
+++ b/modelo.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon-letras.ico" type="image/x-icon">
-    <title>Modelo de Exercício</title>
+    <title>Horário do Dia</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body onload = "carregar()">
